2014-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/arglists.h (struct arglist): Reorder struct elements to reduce
	space wasted on struct memory alignment. Reduces structure size from 48
	to 40 on x64.

2014-06-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/cvss.c (toenum): Also accept "AU" as "Au".

2014-06-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	More elegant setting of constant _HAVE_LIBSSH.

	* nasl/nasl_init.c (init_nasl_library): Removed explicit adding
	of _HAVE_LIBSSH.
	(libivars): Added _HAVE_LIBSSH to this list.

2014-06-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_init.c (init_nasl_library): Re-add setting the NASL variable
	_HAVE_LIBSSH in order to keep compatiblity until OpenVAS-7 expires.
	Also fix typo about function name.

2014-06-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped): Remove the g_strescape of the
	result text because it will be converted to UTF-8.  And do the UTF-8
	conversion here, because it was moved out of nsend in r18531 (because
	nsend is also used to send internal messages).

2014-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl (main): Add -B to specify running the script in description
	mode first, before running in normal mode if no error was found. When
	unset, use the old behaviour of running only once.

	* doc/openvas-nasl.1: Update documentation.

2014-06-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_set_key): Add back kb debug information when
	global_nasl_debug is set.

2014-06-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (parse_script_infos): Code style update. Don't try to add
	nvt OID value if it is not present.

2014-06-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (parse_script_infos): Use script_infos when parsing the
	plugin description instead of creating a new arglist.
