@@ -1,3 +1,8 @@
+2014-07-07  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/network.c: Use OVAS_CONNECTION_FROM_FD() macro instead of
+	accessing the connections array directly.
+
 2014-07-01  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/arglists.h (struct arglist): Reorder struct elements to reduce
